# face-recognizer

./: .gitignore  OtherCamShift.py  README.md  build.sbt  commons.py  detectors.py  drawer.py  enum.py  face_landmark_detection_ex.cpp.html  ffmpeg.py  interpolate.py  mediainfo.py  ring_buffer.py  state_machine.py  test_image.py  tracker.py  video_processing.py
dlib/src/main/scala/radium/: Adder.scala  DLib.scala  Point.scala  Rectangle.scala  Size.scala  TryAdder.scala
dlib/src/native/: CMakeLists.txt  radium_Adder.bak  radium_DLib__.cpp
dlib/src/native/include/: radium_Adder.h  radium_DLib__.h
examples/src/main/resources/: calibrate.bgr  ffmpeg-bgr
examples/src/main/scala/radium226/: Frame.scala  Implicits.scala  Point.scala  Ratio.scala  Size.scala  VideoApplication.scala  package.scala
examples/src/main/scala/radium226/akka/: AlterMatGraphStage.scala  FrameSourceGraphStage.scala  MatAlterer.scala  MatFlow.scala  (+4 more)
project/: Dependencies.scala  Settings.scala  plugins.sbt
sandboxes/: pool_reordering.py  queue_iterator.py
src/main/resources/: image.bgr  to-bgr
src/main/scala/radium226/: Frame.scala  Implicits.scala  Ratio.scala  TryByteArrayIterator.scala  TryToDetectFaces.scala  VideoApplication.scala  VideoObservable.scala  VideoOpener.scala  YouTubeVideoOpener.scala  YoutubeDL.scala
src/main/scala/radium226/rx/: MatObservable.scala  TryMonix.scala
src/main/scala/radium226/sandbox/: RandomDoubleObservable.scala  TryToProcessInParallel.scala
video-stream/src/test/resources/: application.conf
videoStream/src/test/resources/: logback-test.xml
(+89 files in other folders)
